<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/info_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_lr"
                android:gravity="center_vertical"
                android:text="@string/audio_str"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_ud"
                android:gravity="center_vertical"
                android:text="@string/chanel_str"
                android:layout_marginLeft="12dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_ok"
                android:gravity="center_vertical"
                android:text="@string/list_str"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="12dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_menu"
                android:gravity="center_vertical"
                android:text="@string/menu_str"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="12dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/num_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
        android:layout_toLeftOf="@id/info_id"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        android:textStyle="bold" />

</RelativeLayout>